# poc-clawdevs

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.base  IMPLEMENTATION-STATUS.md  LICENSE  Makefile  OPENCLAW_BUNDLE_SUMMARY.md  PHASE4_DEPLOYMENT.md  PHASE4_FINAL_REPORT.md  README.md  VALIDACAO_AGENTS_BUG.md  anotation.txt  debug_agents.py  docker-compose.yaml  pyproject.toml  requirements.base.txt  requirements.txt
control-panel/backend/: Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml
control-panel/backend/app/: main.py
control-panel/backend/app/api/: activity_events.py  agent_permissions.py  agents.py  approvals.py  auth.py  chat.py  cluster.py  context_mode.py  context_mode_memory.py  context_mode_phase6.py  context_mode_semantic_optimization.py  crons.py  deps.py  governance.py  health.py  memory.py  memory_rag.py  metrics.py  repositories.py  sdd.py  sessions.py  settings.py  tasks.py  ws.py
control-panel/backend/app/core/: __init__.py  auth.py  config.py  database.py
control-panel/backend/app/hooks/: __init__.py  semantic_optimization_hook.py
control-panel/backend/app/models/: __init__.py  activity_event.py  agent.py  agent_permission.py  approval.py  constants.py  cron_execution.py  memory_entry.py  metric.py  repository.py  runtime_setting.py  sdd_artifact.py  session.py  task.py  user.py
control-panel/backend/app/services/: activity_sync.py  agent_activity.py  agent_sync.py  circuit_breaker.py  container_client.py  context_metrics.py  context_mode_metrics_broadcaster.py  cost_tracker.py  cron_optimization.py  embedding_search.py  embedding_service.py  failure_detector.py  governance_engine.py  health_monitor.py  k8s_client.py  llm_runtime_client.py  memory_indexing.py  memory_lifecycle.py  memory_sync.py  openclaw_client.py  parallelism_gate.py  rag_retriever.py  runtime_settings.py  semantic_optimization_flags.py  semantic_ranker.py  session_labels.py  session_sync.py  task_contracts.py  task_metrics.py  task_sync.py  task_workflow.py  test_runner.py
control-panel/backend/app/tasks/: __init__.py  periodic_sync.py  task_orchestration.py
control-panel/backend/migrations/: env.py
control-panel/backend/migrations/versions/: 0001_initial.py  0002_agents_schema_update.py  0003_sessions_schema_update.py  0004_repositories_and_task_label.py  0005_approvals_schema_alignment.py  0006_tasks_metrics_schema_alignment.py  0008_memory_embedding_vector.py  0009_add_timezone_to_datetime_columns.py  0016_add_openclaw_session_key_to_sessions.py  20260327_update_memory_embedding_type.py  20260406_runtime_settings.py
control-panel/backend/scripts/: analyze_coverage.py  analyze_coverage_detailed.py  benchmark_session_sync.py  check_mocked_tests.py  find_untested_code.py  fix_test_files.py  validate_tests.py  worker.py
control-panel/backend/tests/: conftest.py  test_approvals.py  test_auth.py  test_context_metrics.py  test_embedding_search.py  test_memory_lifecycle.py  test_parallelism_gate.py  test_semantic_optimization_hook.py  test_task_contracts.py  test_task_orchestration_loop.py
control-panel/backend/tests/integration/: test_admin_authorization.py  test_agent_autonomy_full_flow.py  test_failure_and_escalation.py  test_governance_security.py
control-panel/backend/tests/services/: test_health_monitor.py
control-panel/backend/tests/test_api/: __init__.py  test_activity_events.py  test_admin_only.py  test_agents_sessions.py  test_approvals.py  test_auth_endpoints.py  test_chat.py  test_cluster_health.py  test_crons.py  test_deps.py  test_endpoints.py  test_memory.py  test_metrics.py  test_repositories.py  test_sdd.py  test_security_audit.py  test_security_sentinel.py  test_settings.py  test_tasks.py  test_ws.py
control-panel/backend/tests/test_core/: __init__.py  test_auth.py  test_config.py  test_database.py  test_main.py
control-panel/backend/tests/test_models/: __init__.py  (+11 more)
(+1641 files in other folders)
