[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdevs"
version = "0.1.0"
dependencies = [
    "redis>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "memory*", "security*", "soul*", "tools*", "config*", "scripts*"]
