[project]
name = "clawdevs-panel-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.37",
    "alembic==1.18.4",
    "asyncpg==0.30.0",
    "psycopg[binary]==3.2.4",
    "redis[hiredis]==5.3.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.28.1",
    "kubernetes==32.0.1",
    "watchdog==6.0.0",
    "fastapi-pagination==0.12.36",
    "sse-starlette==2.3.0",
    "rq==2.6.0",
    "python-multipart==0.0.20",
    "pydantic-settings==2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
    "pytest-cov==6.1.0",
    "anyio==4.9.0",
    "aiosqlite==0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
